# auto_shepherd_msgs

./: CMakeLists.txt  README.md  package.xml
action/: DoAction.action
bash/: rename_package.sh
msg/: AudioChunk.msg  PitchCode.msg  PitchTrack.msg  SpectralPeak.msg  Spectrogram.msg  SpectrogramClassification.msg  StringList.msg
srv/: DoService.srv
